--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "contrib/arrow-pipelines/python/pcl"]
 	path = contrib/arrow-pipelines/python/pcl
-	url = git://github.com/ianj-als/pcl.git
+	url = https://github.com/ianj-als/pcl.git
 [submodule "contrib/omtc/omtc"]
 	path = contrib/omtc/omtc
-	url = git://github.com/ianj-als/omtc.git
+	url = https://github.com/ianj-als/omtc.git
