begin cleanup of SCFG parsing. Get rid of Sentence variable in ChartRuleLookupManager, replace with ChartParser variable

--- a/contrib/other-builds/moses/.project
+++ b/contrib/other-builds/moses/.project
@@ -192,6 +192,11 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/ChartParserCallback.h</locationURI>
 		</link>
 		<link>
+			<name>ChartRuleLookupManager.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/ChartRuleLookupManager.cpp</locationURI>
+		</link>
+		<link>
 			<name>ChartRuleLookupManager.h</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses/ChartRuleLookupManager.h</locationURI>
