--- a/contrib/other-builds/moses/.project
+++ b/contrib/other-builds/moses/.project
@@ -287,16 +287,6 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/ConfusionNet.h</locationURI>
 		</link>
 		<link>
-			<name>DecodeFeature.cpp</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/DecodeFeature.cpp</locationURI>
-		</link>
-		<link>
-			<name>DecodeFeature.h</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/DecodeFeature.h</locationURI>
-		</link>
-		<link>
 			<name>DecodeGraph.cpp</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses/DecodeGraph.cpp</locationURI>
@@ -1085,6 +1075,16 @@
 			<name>FF/ControlRecombination.h</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/ControlRecombination.h</locationURI>
+		</link>
+		<link>
+			<name>FF/DecodeFeature.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/DecodeFeature.cpp</locationURI>
+		</link>
+		<link>
+			<name>FF/DecodeFeature.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/DecodeFeature.h</locationURI>
 		</link>
 		<link>
 			<name>FF/DistortionScoreProducer.cpp</name>
