--- a/scripts/ems/example/data/weight.ini
+++ b/scripts/ems/example/data/weight.ini
@@ -6,7 +6,7 @@
 Distortion0= 0.3 
 UnknownWordPenalty0= 1 
 WordPenalty0= -1 
-TranslationModel0= 0.2 0.2 0.2 0.2 0.2 
+TranslationModel0= 0.2 0.2 0.2 0.2
 LexicalReordering0= 0.3 0.3 0.3 0.3 0.3 0.3 
 LM0= 0.5 
 
