adding missing options to VW

--- a/scripts/ems/example/data/psd-features.ini
+++ b/scripts/ems/example/data/psd-features.ini
@@ -16,8 +16,8 @@ factors = 0,1,2
 score-bins= -10,-9,-8,-7,-6,-5,-4,-3,-2,-1,-0.5,-0.25,-0.1,0
 
 [vw-options]
-train = --hash all --noconstant -b 26 -q st --passes 10 --csoaa_ldf mc 
-predict = --hash all --noconstant -b 26 -q st --csoaa_ldf s 
+train = --hash all --noconstant -b 26 -q st --passes 10 --csoaa_ldf mc --loss_function=logistic --initial_t 1
+predict = --hash all --noconstant -b 26 -q st --csoaa_ldf s --loss_function=logistic --initial_t 1
 
 [decoder]
 ; squared_loss or logistic_loss_basic
