--- a/scripts/ems/example/data/dwl-features.ini
+++ b/scripts/ems/example/data/dwl-features.ini
@@ -12,8 +12,8 @@ window-size = 2
 factors = 0
 
 [vw-options]
-train = --hash all --noconstant -b 26 -q st --passes 10 --csoaa_ldf mc --loss_function=logistic --initial_t 1
-predict = --hash all --noconstant -b 26 -q st --csoaa_ldf s --loss_function=logistic --initial_t 1
+train = --hash all --noconstant -b 26 -q st --passes 10 --csoaa_ldf mc --loss_function=logistic 
+predict = -t --hash all --noconstant -b 26 -q st --csoaa_ldf s --loss_function=logistic 
 
 [decoder]
 ; squared_loss or logistic_loss_basic
