ini with rich features

--- a/scripts/ems/example/data/dwl-features.ini
+++ b/scripts/ems/example/data/dwl-features.ini
@@ -1,15 +1,16 @@
 [features]
 
-source-internal = 1
+source-internal = 0
 source-external = 1
 source-indicator = 1
 target-indicator = 1
-target-internal = 1
+target-internal = 0
 paired = 1
 bag-of-words = 1
-phrase-factor = 0
+phrase-factor = 1
+phrase-target-factor = 1
 window-size = 2
-factors = 0
+factors = 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20
 
 [vw-options]
 train = --hash all --noconstant -b 26 -q st --passes 10 --csoaa_ldf mc --loss_function=logistic 
