fixes to vw training. added source-target-indicator to psd ini

--- a/scripts/ems/example/data/psd-features.ini
+++ b/scripts/ems/example/data/psd-features.ini
@@ -4,6 +4,7 @@ source-internal = 1
 source-external = 1
 source-indicator = 1
 target-indicator = 1
+source-target-indicator = 1
 target-internal = 1
 paired = 1
 bag-of-words = 1
@@ -16,8 +17,8 @@ factors = 0,1,2
 score-bins= -10,-9,-8,-7,-6,-5,-4,-3,-2,-1,-0.5,-0.25,-0.1,0
 
 [vw-options]
-train = --hash all --noconstant -b 26 -q st --passes 10 --csoaa_ldf mc --loss_function=logistic 
-predict = -t --hash all --noconstant -b 26 -q st --csoaa_ldf s --loss_function=logistic 
+train = --hash all --noconstant -b 26 -q st --passes 10 --csoaa_ldf mc --loss_function logistic 
+predict = -t --hash all --noconstant -b 26 -q st --csoaa_ldf s --loss_function logistic 
 
 [decoder]
 ; squared_loss or logistic_loss_basic
