--- a/contrib/other-builds/moses/.project
+++ b/contrib/other-builds/moses/.project
@@ -1427,14 +1427,14 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/MultiFactor.h</locationURI>
 		</link>
 		<link>
-			<name>LM/NeuralLM.cpp</name>
+			<name>LM/NeuralLMWrapper.cpp</name>
 			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/NeuralLM.cpp</locationURI>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/NeuralLMWrapper.cpp</locationURI>
 		</link>
 		<link>
-			<name>LM/NeuralLM.h</name>
+			<name>LM/NeuralLMWrapper.h</name>
 			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/NeuralLM.h</locationURI>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/NeuralLMWrapper.h</locationURI>
 		</link>
 		<link>
 			<name>LM/ORLM.cpp</name>
